fix: remove spacing on fullscreen, add flex-grow: 1 to modal

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -69,16 +69,18 @@ body.vue-neat-modal-open {
   transition: .3s cubic-bezier(0.25, 0.8, 0.5, 1);
   max-height: 90%;
   overflow-y: auto;
+  margin: 24px;
+  flex-grow: 1;
 
-  &:not(&--no-spacing) {
-    margin: 24px;
+  &--no-spacing, 
+  &--fullscreen {
+    margin: 0
   }
 
   &--fullscreen {
     position: fixed;
     top: 0;
     left: 0;
-    margin: 0;
     height: 100%;
     width: 100%;
     max-height: 100%;
